--- a/projects/workflows-creator/src/lib/builder/group/group.component.scss
+++ b/projects/workflows-creator/src/lib/builder/group/group.component.scss
@@ -291,6 +291,7 @@ input[type="time"]:focus {
     display: flex;
     padding: 20px;
     justify-content: space-between;
+    align-items: center;
   }
   .close-btn-lib {
     @include theme;
