--- a/projects/workflows-creator/src/lib/builder/group/group.component.html
+++ b/projects/workflows-creator/src/lib/builder/group/group.component.html
@@ -324,10 +324,36 @@
     <div class="date-time-picker" (document:click)="hide()">
       <div class="time-picker">
         <div class="date-input">
-          <input type="date" [(ngModel)]="dateTime.date" />
+          <input
+            type="date"
+            [(ngModel)]="dateTime.date"
+            min="0000-01-01"
+            max="9999-12-31"
+            (keydown)="
+              handleEnterEvent(
+                callback,
+                nodeWithInput.node,
+                {target: {value: dateTime}},
+                inputType.DateTime,
+                $event
+              )
+            "
+          />
         </div>
         <div class="time-input">
-          <input type="time" [(ngModel)]="dateTime.time" />
+          <input
+            type="time"
+            [(ngModel)]="dateTime.time"
+            (keydown)="
+              handleEnterEvent(
+                callback,
+                nodeWithInput.node,
+                {target: {value: dateTime}},
+                inputType.DateTime,
+                $event
+              )
+            "
+          />
         </div>
         <div>
           <button
