fix(workflows): disable set button in email GH-0

--- a/projects/workflows-creator/src/lib/builder/group/group.component.html
+++ b/projects/workflows-creator/src/lib/builder/group/group.component.html
@@ -92,7 +92,7 @@
           [popperTrigger]="'none'"
           [popperPlacement]="'bottom-start'"
           [popperApplyClass]="'workflow-popper'"
-          (click)="onPoperClick($event, inputPopper)"
+          (click)="onPoperClick($event, inputPopper, input, nodeWithInput)"
           (mouseover)="showTooltip($event, nodeWithInput, input)"
           (mouseout)="hideTooltip()"
         >
